--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,6 +62,19 @@ border: none;
     color: #000000;
 }
 
+/* City name text on mobile*/
+.city-text {
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 52.8px;
+    letter-spacing: -2px;
+    text-align: center;
+    margin-bottom: -15px;
+    width: 100%;
+    color: #000000;
+}
+
 /* Normal text */
 .normal-text {
     font-size: 16px;
