--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,16 +1,18 @@
 /*Button colour*/
 .st-key-blue button {
-    background-color:#1078e1;
-    color:#ffffff;
-    border: none;
+   background-color:#1078e1;
+   color:#ffffff;
+   border: none;
 }
+
 
 /*Button hover colour*/
 .st-key-blue button:hover {
-    background-color:rgb(0, 83, 166);
-    color:#ffffff;
-    border: none;
+   background-color:rgb(0, 83, 166);
+   color:#ffffff;
+   border: none;
 }
+
 
 /*Override focus states to prevent default button border*/
 .st-key-blue button:focus {
@@ -18,91 +20,108 @@ background-color:#1078e1;
 border: none;
 }
 
+
 /*Apply same text colour during button focus states*/
 .st-key-blue button:focus p {
-    color:#ffffff;
+   color:#ffffff;
 }
+
 
 /* Markdown with white background */
 .blue-markdown {
-    color: #1e90ff;
-    background-color: #ffffff;
-    border: 5px solid #ffffff;
-    border-radius: 12px;
+   color: #1e90ff;
+   background-color: #ffffff;
+   border: 5px solid #ffffff;
+   border-radius: 12px;
 }
+
 
 /* Markdown with blue background */
 .white-markdown {
-    color: #ffffff;
-    background-color: #1078e1;
-    border: 10px solid #1078e1;
-    border-radius: 30px;
+   color: #ffffff;
+   background-color: #1078e1;
+   border: 10px solid #1078e1;
+   border-radius: 30px;
 }
+
 
 /* 75px text */
 .big-text {
-    font-size: 75px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 52.8px;
-    margin-bottom: 5px;
-    color: #000000;
+   font-size: 75px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 52.8px;
+   margin-bottom: 5px;
+   color: #000000;
 }
+
 
 /* 75px text for temperature display on mobile */
 .temp-text {
-    font-size: 75px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 52.8px;
-    margin-top: -75px;
-    margin-bottom: 25px;
-    color: #000000;
+   font-size: 75px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 52.8px;
+   margin-top: -75px;
+   margin-bottom: 25px;
+   color: #000000;
 }
+
 
 /* Header text */
 .header-text {
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 52.8px;
-    letter-spacing: -2px;
-    text-align: center;
-    margin-bottom: 15px;
-    width: 100%;
-    color: #000000;
+   font-size: 48px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 52.8px;
+   letter-spacing: -2px;
+   text-align: center;
+   margin-bottom: 15px;
+   width: 100%;
+   color: #000000;
 }
+
 
 /* Blue header text */
 .blue-header-text {
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 52.8px;
-    letter-spacing: -2px;
-    text-align: center;
-    margin-bottom: 15px;
-    width: 100%;
-    color: #1078e1;
+   font-size: 48px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 52.8px;
+   letter-spacing: -2px;
+   text-align: center;
+   margin-bottom: 15px;
+   width: 100%;
+   color: #1078e1;
 }
+
 
 /* City name text on mobile*/
 .city-text {
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 52.8px;
-    letter-spacing: -2px;
-    text-align: center;
-    margin-bottom: -75px;
-    width: 100%;
-    color: #000000;
+   font-size: 48px;
+   font-style: normal;
+   font-weight: 600;
+   line-height: 52.8px;
+   letter-spacing: -2px;
+   text-align: center;
+   margin-bottom: -75px;
+   width: 100%;
+   color: #000000;
 }
+
 
 /* Normal text */
 .normal-text {
-    font-size: 16px;
-    font-style: normal;
-    letter-spacing: -0.32px;
-    color: #6b7280;
+   font-size: 16px;
+   font-style: normal;
+   letter-spacing: -0.32px;
+   color: #6b7280;
+}
+
+/* Blue container */
+.blue-container {
+    background-color: #1e90ff;
+    padding: 16px;
+    border-radius: 16px;
+    border: 2px solid #1e90ff;
 }
