--- a/assets/styles.css
+++ b/assets/styles.css
@@ -42,6 +42,7 @@ border: none;
    background-color: #1078e1;
    border: 10px solid #1078e1;
    border-radius: 30px;
+   margin-bottom: 20px;
 }
 
 
